refactor: restructure comment API to include postId, introduce paginated responses, and implement comment popularity event tracking.